# custom-led-controller

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
Controller.CustomLedStrip/: Dockerfile  docker-compose.yml  requirements.txt
Controller.CustomLedStrip/src/models/: dtos.py
Controller.CustomLedStrip/src/routes/: requests.py
Controller.CustomLedStrip/src/utils/: color.py  ledstrip.py  ledstripconfig.py
src/: Dockerfile  colors.rs  configuration.yaml  main.rs  opening-animation.rs  smooth-transition.rs  strip.rs  test-opening-animation.rs
src/animation/: aurora-borealis.rs  opening-animation.rs  rainbow.rs  starry-night.rs  sunrise-simulation.rs
src/models/: dtos.py
src/routes/: request.py  requests.py
src/server/: app.py
src/strip/: colors.rs
src/utils/: ledstrip.py
