[package]
name = "custom-led-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
rs_ws281x = "0.5.1"
